--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=\, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Inline</title>
-</head>
+    <style>
+        img {
+            width: 300px;
+        }
+    </style>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Notice</h1>
+      <h1>Notice</h1>
     </header>
 
     <main>
-        <h3>Important Dates</h3>
-        <ul>
-            <li>1st of January</li>
-            <li>1st of May</li>
-            <li>25th of December</li>
-        </ul>
-        <em>
-            <p class="holidays">All dates are public holidays.</p>
-        </em>
+      <h3>Important Dates</h3>
+      <ul>
+        <li>1<sup>st</sup> of January</li>
+        <li>1<sup>st</sup> of May</li>
+        <li>25 <sup>th</sup>of December</li>
+      </ul>
+      <em>
+        <p class="holidays"><i>All dates are public holidays.</i></p>
+      </em>
 
-        <p class="note">
-            Please note that the 31st of October and the 20th of
-                November are regional holidays in Germany.
-        </p>
+      <p class="note">
+        Please note that the <b>31st of October</b> and the
+        <b>20th of November</b> are regional holidays in Germany.
+      </p>
     </main>
-
+<img src="/image/de.jpg" alt="DE Flag"/>
     <footer>
-        <p>Source: Wikipedia</p>
+      <p>Source: <cite> <a href="https://en.wikipedia.org/wiki/Public_holidays_in_Germany">Wikipedia</a></cite></p>
     </footer>
-</body>
+  </body>
+</html>
